# vpaura-be

./: .env.example  .gitignore  Dockerfile  MODELS_UPDATE.md  README.md  VPAURA_PROJECT_PLAN.md  docker-compose.yml  prometheus.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_add_thread_chatmessage_document_models.py  283de6914c36_change_session_id_from_uuid_to_int.py
src/: main.py
src/ai_core/: __init__.py  langfuse_wrapper.py
src/ai_core/agents/: __init__.py  agent_factory.py  agent_router.py  base.py  chat_agent.py  neo4j_agent.py  rag_agent.py
src/ai_core/guardrail/: base.py  content_guardrail.py  manager.py
src/ai_core/llm/: __init__.py  base.py  (+3 more)
src/config/: settings.py
src/constants/: config.py  enums.py  errors.py  messages.py
src/core/: logger.py  streaming.py
src/database/: connection.py  engine.py  session.py
src/exceptions/: api.py  base.py  database.py  handlers.py  service.py
src/middleware/: dependencies.py  metrics.py  middleware.py  rate_limit.py
src/models/: __init__.py  base.py  conversation.py  conversation_document.py  document.py  message.py  session.py  session_document.py  user.py
src/repositories/: base.py  conversation.py  document.py  message.py  session.py  user.py
src/schemas/: base.py  chatbot.py  conversation.py  document.py  message.py  session.py  user.py
src/services/: __init__.py  chat_completion.py  chatbot.py  checkpoint_cleanup.py  conversation.py  document.py  message.py  session.py  user.py
src/utils/: converters.py  formatters.py  helpers.py  validators.py
tests/: conftest.py
(+40 files in other folders)
